# ServerControl

./: .gitignore  ADVANCED_FEATURES.md  ARCHITECTURE.md  CMakeLists-Windows.txt  CMakeLists.txt  COMPARISON.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MODULARIZATION_STATUS.md  MODULAR_COMPLETE.md  MODULAR_IMPLEMENTATION.md  PRODUCTION_READY.md  README.md  SCREENSHOTS.md  UI_SCREENSHOTS.md  WEBSOCKET_API.md  WINDOWS_SUPPORT.md  build-all.ps1  build-enhanced.sh  build-windows.bat  build-windows.ps1  build.bat  build.ps1  build.sh  build_modular.bat  build_modular.ps1  build_modular.sh  deploy.ps1  server.cpp  test.sh  tests.ps1  tests.sh  websocket_demo.html
.github/workflows/: main.yml
control/: Config.cpp  Config.h  HttpClient.cpp  Server.h  Task.h  TaskManager.cpp  TaskManager.h  UI.cpp  UI.h  main.cpp
control/advanced/: AdvancedFeatures.h
control/config/: Config.cpp  Config.h
control/core/: Task.h  TaskManager.cpp  TaskManager.h
control/http/: HttpClient.h
control/network/: Server.cpp
control/ui/: UI.cpp  UI.h
files/: README.md  control  servercontrol_modular
server/: main.cpp  main_modular.cpp
server/core/: Utils.cpp  Utils.h
server/files/: FileManager.h
server/monitoring/: Stats.cpp  Stats.h
server/network/: Discovery.cpp  Discovery.h  HttpHandler.h  NetworkConfig.cpp  NetworkConfig.h  WebSocket.cpp  WebSocket.h
server/platform/: PlatformAbstraction.cpp  PlatformAbstraction.h
server/stats/: StatsMonitor.cpp  StatsMonitor.h
server/system/: RemoteDesktop.cpp  RemoteDesktop.h
server/tasks/: Task.cpp  Task.h  TaskExecutor.cpp  TaskExecutor.h  TaskManager.cpp  (+1 more)
(+2 files in other folders)
